--- a/jquery-popup/index.html
+++ b/jquery-popup/index.html
@@ -135,6 +135,11 @@
 							<td>[0,0]</td>
 							<td>有效值为 [n, m],points对齐后offset值,一般可用于微调,n和m分别表示对齐两个点在x,y坐标之间的偏移量</td>
 						</tr>
+						<tr>
+							<td>onTrigger</td>
+							<td>function(api){}</td>
+							<td>弹出时触发，api接口可以控制弹层的展示(show)及隐藏(hide)</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
