--- a/index.html
+++ b/index.html
@@ -365,14 +365,12 @@
         }
     </script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script>
-        var _hmt = _hmt || [];
-        (function () {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?134d31aed1aec463afbaa9e0bec45001";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "pn2qol3rtx");
     </script>
     <script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 </body>
