--- a/index.html
+++ b/index.html
@@ -365,13 +365,7 @@
         }
     </script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "pn2qol3rtx");
-    </script>
     <script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
+    <script type="text/javascript" src="https://jquerywidget.com/public/script/stat.js"></script>
 </body>
 </html>
