--- a/jquery-countdown/index.html
+++ b/jquery-countdown/index.html
@@ -131,14 +131,6 @@
 			</div>
 		</div>
 		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
-		<script>
-			var _hmt = _hmt || [];
-			(function() {
-			  var hm = document.createElement("script");
-			  hm.src = "https://hm.baidu.com/hm.js?134d31aed1aec463afbaa9e0bec45001";
-			  var s = document.getElementsByTagName("script")[0];
-			  s.parentNode.insertBefore(hm, s);
-			})();
-		</script>
+		<script type="text/javascript" src="https://jquerywidget.com/public/script/stat.js"></script>
 	</body>
 </html>
