--- a/jquery-countdown/index.html
+++ b/jquery-countdown/index.html
@@ -84,8 +84,8 @@
 							<td>计数的时间间隔（单位：毫秒）</td>
 						</tr>
 						<tr>
-							<td>disableBtnCls</td>
-							<td>disable</td>
+							<td>disabledCls</td>
+							<td>disabled</td>
 							<td>计数期间的class</td>
 						</tr>
 						<tr>
