--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <header>
             <div class="mod-head">
                 <div class="inner">
-                    <h1>我的Web组件库</h1>
+                    <h1>我的jQuery插件库</h1>
                     <p>让前端开发快到飞起来～</p>
                 </div>
             </div>
