--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -160,7 +160,7 @@ $('.search input[type="text"]').suggestion({
 							<td>建议列表节点样式</td>
 						</tr>
 						<tr>
-							<td>FieldName</td>
+							<td>fieldName</td>
 							<td>'word'</td>
 							<td>当前input表单项在请求接口时的字段名</td>
 						</tr>
