--- a/jquery-tablesort/index.html
+++ b/jquery-tablesort/index.html
@@ -204,6 +204,21 @@
 						</tr>
 					</tbody>
 				</table>
+				<h2>callback(api)参数</h2>
+				<table>
+					<thead>
+						<tr>
+							<th width="200">方法</th>
+							<th>说明</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>sortByIndex(index,type)</td>
+							<td>重新出发排序</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
 		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
